--- a/backend/.env.example
+++ b/backend/.env.example
@@ -2,6 +2,9 @@ PORT=4000
 JWT_SECRET=your-super-secret-jwt-key-change-in-production
 GEMINI_API_KEY=your-gemini-api-key
 
+# Google OAuth（与前端 VITE_GOOGLE_CLIENT_ID 一致，用于校验 ID Token）
+GOOGLE_OAUTH_CLIENT_ID=your-google-oauth-web-client-id.apps.googleusercontent.com
+
 # Firebase (Firestore) - 任选其一方式配置：
 # 方式一：服务账号 JSON 文件路径（本地开发推荐）
 GOOGLE_APPLICATION_CREDENTIALS=./path-to-your-service-account.json
