--- a/backend/package.json
+++ b/backend/package.json
@@ -6,11 +6,13 @@
   "scripts": {
     "build": "tsc",
     "start": "node dist/index.js",
-    "dev": "tsx watch src/index.ts"
+    "dev": "tsx watch src/index.ts",
+    "db:init": "tsx scripts/init-db.ts"
   },
   "dependencies": {
     "dotenv": "^16.4.5",
     "firebase-admin": "^13.0.0",
+    "google-auth-library": "^9.14.0",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "express": "^4.21.0",
